Create layout with content

--- a/app/index.html
+++ b/app/index.html
@@ -7,10 +7,252 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>UpBox</title>
     <link rel="stylesheet" href="CSS/main.css">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
-<header></header>
-<main></main>
-<footer></footer>
+<div class="top-bar">
+    <img class="top-bar__img" src="assets/images/topbar.png" alt="topbar">
+</div>
+<header class="header">
+    <div class="wrapper header__wrapper flex flex_space-between">
+        <div class="logo">
+            <a href="/">
+                <picture>
+                    <source srcset="assets/images/logo.png" media="(min-width: 1200px)">
+                    <source srcset="assets/images/logo-tablet.png" media="(min-width: 600px)">
+                    <source srcset="assets/images/logo-mobile.png" media="(max-width: 599px)">
+                    <img src="assets/images/logo.png" alt="box">
+                </picture>
+            </a>
+        </div>
+        <div class="nav">
+            <input type="checkbox" class="nav__toggle" id="nav-toggle">
+            <label for="nav-toggle" class="nav__btn">
+                <span class="nav__icon">&nbsp;</span>
+            </label>
+            <nav class="nav__menu">
+                <ul class="nav__menu-list">
+                    <li class="nav__menu-item"><a class="nav__menu-link" href="#">THIS MONTH</a></li>
+                    <li class="nav__menu-item"><a class="nav__menu-link" href="#">SKIN</a></li>
+                    <li class="nav__menu-item"><a class="nav__menu-link" href="#">HAIR</a></li>
+                    <li class="nav__menu-item"><a class="nav__menu-link" href="#">BATH</a></li>
+                    <li class="nav__menu-item"><a class="nav__menu-link" href="#">SALE</a></li>
+                    <li class="nav__menu-item"><a class="nav__menu-link nav__menu-link_modified" href="#">LOG IN ></a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+    </div>
+</header>
+<main>
+    <section class="banner">
+        <div class="wrapper banner__wrapper">
+            <div class="banner__content">
+                <h1 class="banner__heading">Look good without leaving your house.</h1>
+                <div class="description banner__description">
+                    Upbox is the easiest way to look your best without having to hunt for the perfect makeup
+                    combination. Our stylists curate the latest trends and send them directly to your door every month.
+                </div>
+                <button type="button" class="button button_white top-banner__button">SIGN UP></button>
+            </div>
+            <picture class="banner__images">
+                <source srcset="assets/images/banner-box-desktop.png" media="(min-width: 1200px)">
+                <source srcset="assets/images/banner-box-tablet.png" media="(min-width: 600px)">
+                <source srcset="assets/images/banner-box-mobile.png" media="(max-width: 599px)">
+                <img src="assets/images/banner-box.png" alt="box">
+            </picture>
+        </div>
+    </section>
+    <section class="plan">
+        <div class="wrapper plan__wrapper flex flex_column">
+            <h2 class="title plan__title">Pick your plan</h2>
+            <div class="underline plan__underline">
+                <img src="assets/images/underline.png" alt="underline">
+            </div>
+            <div class="plan__content">
+                <div class="plan__content_left flex flex_column flex_align-center">
+                    <h3 class="plan__subtitle">Monthly</h3>
+                    <p>$18/mo</p>
+                    <button type="button" class="button button_pink plan__button">FIND YOUR BOX</button>
+                </div>
+                <div class="plan__content_right flex flex_column flex_align-center">
+                    <h3 class="plan__subtitle">Yearly</h3>
+                    <p>$15/mo</p>
+                    <button type="button" class="button button_pink plan__button">FIND YOUR BOX</button>
+                </div>
+            </div>
+            <div class="description plan__description">
+                Your plan auto-renews at the end of 30 days from the 1st day you signed-up.
+            </div>
+        </div>
+    </section>
+    <section class="instruction">
+        <div class="wrapper instruction__wrapper flex flex_column">
+            <h2 class="title instruction__title">How it works?</h2>
+            <div class="underline instruction__underline">
+                <img src="assets/images/underline.png" alt="underline">
+            </div>
+            <div class="flex flex_column">
+                <div class="instruction__content flex flex_content-start">
+                    <div class="instruction__image instruction__image_first">
+                        <img src="assets/images/art-marker-1.png" alt="art" class="instruction__image-marker-1">
+                        <img src="assets/images/setup-profile.png" alt="setup-profile">
+                    </div>
+                    <div class="description instruction__description">
+                        <h3 class="subtitle instruction__subtitle">Setup your profile & preferences</h3>
+                        <div>
+                            Once you create an account, you can start to tell us your likes and dislikes so we can
+                            tailor
+                            the experience just for you.
+                        </div>
+                    </div>
+                </div>
+                <div class="instruction__content flex flex_align-center flex_column">
+                    <div class="instruction__image instruction__image_second">
+                        <img src="assets/images/custom-box.png" alt="box">
+                        <img src="assets/images/art-marker-2.png" alt="art" class="instruction__image-marker-2">
+                    </div>
+                    <div class="description instruction__description">
+                        <h3 class="subtitle instruction__subtitle">Review your custom box</h3>
+                        <div>
+                            Once we get to know you, we will show you the box we’ve crafted. This is your chance to
+                            approve
+                            it before we ship it to your house.
+                        </div>
+                    </div>
+                </div>
+                <div class="instruction__content flex flex_content-start">
+                    <div class="instruction__image instruction__image_third">
+                        <img src="assets/images/try-it.png" alt="setup-profile">
+                        <img src="assets/images/art-marker-3.png" alt="art" class="instruction__image-marker-3">
+                    </div>
+                    <div class="description instruction__description">
+                        <h3 class="subtitle instruction__subtitle">Try it on at home</h3>
+                        <div>
+                            Your box will arrive within 3-5 days (usually sooner) and you get the joy to unbox your
+                            Upbox.
+                            Try it all on and send back whatever you’re not in love with.
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+            <button type="button" class="button button_white instruction__button">TRY IT FOR YOURSELF></button>
+        </div>
+    </section>
+    <section class="social">
+        <div class="wrapper social__wrapper flex flex_column flex_align-center">
+            <h2 class="title social__title">Social Posts</h2>
+            <div class="social__content flex flex_wrap flex_content-center">
+                <div class="social__column">
+                    <figure class="social-post">
+                        <picture>
+                            <img src="assets/images/social-posts-1.png" alt="social post">
+                        </picture>
+                        <figcaption class="description social-post__description">
+                            How to rock the lip look that turns heads
+                        </figcaption>
+                    </figure>
+                </div>
+                <div class="social__column">
+                    <figure class="social-post">
+                        <picture>
+                            <img src="assets/images/social-posts-2.png" alt="social post">
+                        </picture>
+                        <figcaption class="description social-post__description">
+                            Find the perfect shade for the season
+                        </figcaption>
+                    </figure>
+                </div>
+                <div class="social__column">
+                    <figure class="social-post">
+                        <picture>
+                            <img src="assets/images/social-posts-3.png" alt="social post">
+                        </picture>
+                        <figcaption class="description social-post__description">
+                            The 5 eye shadow secrets you never knew
+                        </figcaption>
+                    </figure>
+                </div>
+                <div class="social__column">
+                    <figure class="social-post">
+                        <picture>
+                            <img src="assets/images/social-posts-4.png" alt="social post">
+                        </picture>
+                        <figcaption class="description social-post__description">
+                            The pro-tips for at home hair dying
+                        </figcaption>
+                    </figure>
+                </div>
+            </div>
+            <button type="button" class="button button_pink social__button">FOLLOW US ON INSTAGRAM</button>
+        </div>
+    </section>
+</main>
+<footer class="footer">
+    <div class="wrapper footer__wrapper">
+        <div class="footer__container flex flex_space-between flex_align-center">
+            <div class="logo footer__logo">
+                <a href="#"><img src="assets/images/logo.png" alt="logo"></a>
+            </div>
+            <div class="footer__socials flex">
+                <a class="footer__socials-link" href="#"><img class="footer__socials-img"
+                                                              src="assets/icons/instagram-icon.png" alt="instagram"></a>
+                <a class="footer__socials-link" href="#"><img class="footer__socials-img" src="assets/icons/fb-icon.png"
+                                                              alt="facebook"></a>
+                <a class="footer__socials-link" href="#"><img class="footer__socials-img" src="assets/icons/tw-icon.png"
+                                                              alt="twitter"></a>
+                <a class="footer__socials-link" href="#"><img class="footer__socials-img"
+                                                              src="assets/icons/sc-icons.png" alt="snap chat"></a>
+            </div>
+        </div>
+        <div class="flex flex_wrap flex_space-between">
+            <ul class="footer__nav-col footer__nav-content">
+                <h3 class="footer__nav-title">Upbox</h3>
+                <li class="footer__nav-item"><a class="footer__nav-link" href="#">Upbox Bag</a></li>
+                <li class="footer__nav-item"><a class="footer__nav-link" href="#">Upbox Box Platinum</a></li>
+                <li class="footer__nav-item"><a class="footer__nav-link" href="#">Upbox Box VIP</a></li>
+                <li class="footer__nav-item"><a class="footer__nav-link" href="#">Deals</a></li>
+                <li class="footer__nav-item"><a class="footer__nav-link" href="#">Seasonal Items</a></li>
+                <li class="footer__nav-item"><a class="footer__nav-link" href="#">Upbox Promise</a></li>
+            </ul>
+            <ul class="footer__nav-col footer__nav-content">
+                <h3 class="footer__nav-title">Find Us On</h3>
+                <li class="footer__nav-item"><a class="footer__nav-link" href="#">Instagram</a></li>
+                <li class="footer__nav-item"><a class="footer__nav-link" href="#">Facebook</a></li>
+                <li class="footer__nav-item"><a class="footer__nav-link" href="#">TikTok</a></li>
+                <li class="footer__nav-item"><a class="footer__nav-link" href="#">SnapChat</a></li>
+                <li class="footer__nav-item"><a class="footer__nav-link" href="#">Twitter</a></li>
+            </ul>
+            <ul class="footer__nav-col footer__nav-content">
+                <h3 class="footer__nav-title">Product</h3>
+                <li class="footer__nav-item"><a class="footer__nav-link" href="#">Get the App</a></li>
+                <li class="footer__nav-item"><a class="footer__nav-link" href="#">Loyalty Program</a></li>
+                <li class="footer__nav-item"><a class="footer__nav-link" href="#">Affiliates</a></li>
+                <li class="footer__nav-item"><a class="footer__nav-link" href="#">Press</a></li>
+            </ul>
+            <ul class="footer__nav-col footer__nav-content">
+                <h3 class="footer__nav-title">Help</h3>
+                <li class="footer__nav-item"><a class="footer__nav-link" href="#">Returns</a></li>
+                <li class="footer__nav-item"><a class="footer__nav-link" href="#">FAQ</a></li>
+                <li class="footer__nav-item"><a class="footer__nav-link" href="#">Contact</a></li>
+                <li class="footer__nav-item"><a class="footer__nav-link" href="#">Community</a></li>
+                <li class="footer__nav-item"><a class="footer__nav-link" href="#">Videos</a></li>
+            </ul>
+        </div>
+        <div class="footer__copyrights flex flex_column">
+            <div class="footer__copyrights-content">
+                <div class="footer__copyrights-items">
+                    <a class="footer__copyrights-link" href="#">Terms</a>
+                    <a class="footer__copyrights-link" href="">Privacy Policy</a>
+                </div>
+                <div class="footer__copyrights-text">
+                    © 2020 Quest AI. Upbox is a Sample Project and open source design project free for personal and
+                    commercial use.
+                </div>
+            </div>
+        </div>
+    </div>
+</footer>
 </body>
 </html>
